# im-lazy

./: .gitignore  .gitlab-ci.yml  0f5001f4.ffe64c77.js  2.04ffdbac.js  213c6182.b6e988f4.js  26.bcc48534.js  27.5f369629.js  28.b3336e65.js  2868cdab.3ce4ddd8.js  306cf4ee.85721b3c.js  3570154c.ff2a483d.js  359a474c.579d0fba.js  3842ec92.6caca77f.js  404.html  47000d50.8394c6fb.js  4845aeb3.e1bd9980.js  616665f6.a4eec299.js  8e9f0a8a.5cc179c7.js  README.md  af172acd.0d1e5043.js  b2f90839.0f1d2873.js  bdd709f1.188005a1.js  ce3e42ad.6b8d4913.js  d610846f.e6e0bea0.js  df361e2b.3dbeabb3.js  index.html  main.167cc166.js  package.json  runtime~main.301f7104.js  sitemap.xml  skaffold.yaml  styles.a0400064.js
Your.Namespace.Api/: .env  .gitignore  .gitlab-ci.yml  AppSettings.cs  Enums.cs  MessageConsumer.cs  Program.cs  Startup.cs  WeatherForecast.cs  Worker.cs  Your.Namespace.Api.csproj  appsettings.json  build.sh  docker-compose.yml  stylecop.json  yournamespaceapi.db
Your.Namespace.Api.Tests/: Your.Namespace.Api.Tests.csproj
Your.Namespace.AuthorizationServer/: .gitignore  Program.cs  Startup.cs  Worker.cs  Your.Namespace.AuthorizationServer.csproj  appsettings.json
Your.Namespace.ConsoleApp/: AppSettings.cs  Program.cs  Worker.cs  Your.Namespace.ConsoleApp.csproj  appsettings.json
Your.Namespace.IdentityServer/: .env  AppSettings.cs  (+14 more)
server/Your.Namespace.Api2/YourNamespaceApi2/: Cargo.toml  Dockerfile  run-docker.sh
server/Your.Namespace.Api2/YourNamespaceApi2/src/: main.rs
yournamespaceapi4/: Cargo.toml  Dockerfile  Rocket.toml
yournamespaceapi4/src/: main.rs
(+550 files in other folders)
