[package]
name = "yournamespaceapi4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.9"
chrono = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocket_contrib = "0.4.9"