[package]
name = "YourNamespaceApi2"
version = "0.1.0"
authors = ["aTable <goforthejuggular@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocket_contrib = "0.4"
rand = "0.8"